# LLM-Eval-Kit

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  test_multi_provider.py  verify.py
.github/workflows/: ci.yml
docs/: PRD.md  evaluation-methodology.md  product-requirements.md
docs/images/: report_2026-05-07_15-05-02.html
examples/: all_models_test.py  basic.py  basic_demo.py  basic_qwen_deepseek.py  basic_qwen_deepseek_mock.py  basic_usage.py  batch_test_all_models.py  compare_models.py  complete_models_list.py  concurrent_eval.py  generate_report.py  multi_model_compare.py  quick_models_test.py  rule_scorer_demo.py  sample_data.jsonl  scoring_demo.py  test_demo.py  test_html_reporter.py  test_quality_scoring.py
llm_eval_kit/: __init__.py  cli.py  client.py
llm_eval_kit/adapters/: __init__.py  base.py  multi_provider_adapter.py  openai_compat.py  openai_compatible.py  openai_compatible_httpx.py
llm_eval_kit/core/: __init__.py  evaluator.py
llm_eval_kit/dataset/: __init__.py  loader.py
llm_eval_kit/metrics/: quality_scorer.py
llm_eval_kit/reporter/: __init__.py  comparator.py  console.py  console_reporter.py  cost_benefit.py  html_reporter.py  models.py  regression.py  regression_reporter.py
llm_eval_kit/scorers/: __init__.py  base.py  llm_judge.py  rule_scorer.py
llm_eval_kit/utils/: __init__.py  common.py  config.py  cost_analysis.py  cost_calc.py
reports/: report_2026-05-07_11-51-17.html  report_2026-05-07_11-54-53.html  report_2026-05-07_12-52-18.html  report_2026-05-07_13-15-32.html  report_en_demo.html
results/: batch_test_recommended_20260507_092701.json
scripts/: gen_demo_report.py  gen_en_report.py  take_screenshot.ps1
tests/: conftest.py  test_basic.py
